# gba-rust-template

./: Cargo.toml  Makefile  init.py  init.sh  readme.md  remove-init.sh
.cargo/: config
src/: lib.rs
